--- a/qt/build.properties
+++ b/qt/build.properties
@@ -15,7 +15,8 @@
 # 
 
 # Where is your Qt installed?
-QTDIR=/opt/Qt
+QTDIR=/home/goun/Qt5.6.0/5.6
+
 
 # modify this for your platform
-QTBIN=/opt/Qt/5.4/gcc_64/bin
+QTBIN=/home/goun/Qt5.6.0/5.6/gcc_64/bin
