--- a/package.json
+++ b/package.json
@@ -53,17 +53,19 @@
         "nodejs": ">= 0.10"
     },
     "devDependencies": {
-        "webpack": ">= 3.10.0",
-        "uglify-js": ">= 3.3.0",
-        "trireme": ">= 0.9.0",
+        "babel-loader": "^7.1.2",
         "cldr-data": ">= 32.0.0",
         "grunt": "~0.4.5",
         "grunt-contrib-nodeunit": "~0.4.1",
-        "grunt-contrib-uglify": "~0.5.0"
+        "grunt-contrib-uglify": "~0.5.0",
+        "trireme": ">= 0.9.0",
+        "uglify-js": ">= 3.3.0",
+        "webpack": ">= 3.10.0"
     },
     "scripts": {
         "test": "ant test",
         "build.web": "webpack -p",
-        "watch": "webpack --watch"
+        "watch": "webpack --watch",
+		"babel": "babel --presets es2015 lib/ilibdata-webpack-loader.js -o output/js/ilibdata-webpack-loader.bundle.js"
     }
 }
