--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
         "grunt-contrib-uglify": "~0.5.0",
         "trireme": ">= 0.9.0",
         "uglify-js": ">= 3.3.0",
-        "webpack": ">= 3.10.0"
+        "webpack": ">= 3.10.0",
+        "uglifyjs-webpack-plugin: "^3.0.0"
     },
     "scripts": {
         "test": "ant test",
