--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "trireme": ">= 0.9.0",
         "uglify-js": ">= 3.3.0",
         "webpack": ">= 3.10.0",
-        "uglifyjs-webpack-plugin: "^3.0.0"
+        "uglifyjs-webpack-plugin": "^3.0.0"
     },
     "scripts": {
         "test": "ant test",
