--- a/js/build.xml
+++ b/js/build.xml
@@ -123,13 +123,6 @@ limitations under the License.
 				<arg value="--env.compilation=@{compilation}"/>
 				<arg value="--env.locales=@{locales}"/>
 			</exec>
-			<exec osfamily="mac" executable="node" dir="${build.base}" failifexecutionfails="@{failquit}" failonerror="@{failquit}">
-				<arg value="${WEBPACKDIR}/bin/webpack.js"/>
-				<arg value="--env.assembly=@{assembly}"/>
-				<arg value="--env.size=@{size}"/>
-				<arg value="--env.compilation=@{compilation}"/>
-				<arg value="--env.locales=@{locales}"/>
-			</exec>
 			<exec osfamily="windows" executable="node.exe" dir="${build.base}" failifexecutionfails="@{failquit}"  failonerror="@{failquit}">
 				<arg value="${WEBPACKDIR}/bin/webpack.js"/>
 				<arg value="--env.assembly=@{assembly}"/>
@@ -146,7 +139,7 @@ limitations under the License.
 			<srcfiles dir="${build.locale}" includes="**/*.json" />
 		</uptodate>
 	</target>
-	<target name="assemble.core" depends="prepare,gen.manifest.locale,testilib.core" unless="core.ilib.core.not.needed" description="assembles the js files into a single file in the right order to satisfy dependencies">
+	<target name="assemble.core.assembled" depends="prepare,gen.manifest.locale,testilib.core" unless="core.ilib.core.not.needed" description="assembles the js files into a single file in the right order to satisfy dependencies">
 		<runassemble
 			assembly="assembled"
 			size="core"
@@ -158,6 +151,19 @@ limitations under the License.
 			compilation="compiled"
 			locales="en-AU,en-CA,en-GB,en-IN,en-NG,en-PH,en-PK,en-SG,en-US,en-ZA,de-DE,fr-CA,fr-FR,es-AR,es-ES,es-MX,id-ID,it-IT,ja-JP,ko-KR,pt-BR,ru-RU,tr-TR,vi-VN,zxx-XX,zh-Hans-CN,zh-Hant-HK,zh-Hant-TW,zh-Hans-SG"/>
 	</target>
+    <target name="assemble.core.dyndata" depends="prepare,gen.manifest.locale,testilib.core" unless="core.ilib.core.not.needed" description="assembles the js files into a single file in the right order to satisfy dependencies">
+        <runassemble
+            assembly="dynamic"
+            size="core"
+            compilation="uncompiled"
+            locales="en-AU,en-CA,en-GB,en-IN,en-NG,en-PH,en-PK,en-SG,en-US,en-ZA,de-DE,fr-CA,fr-FR,es-AR,es-ES,es-MX,id-ID,it-IT,ja-JP,ko-KR,pt-BR,ru-RU,tr-TR,vi-VN,zxx-XX,zh-Hans-CN,zh-Hant-HK,zh-Hant-TW,zh-Hans-SG"/>
+        <runassemble
+            assembly="dynamic"
+            size="core"
+            compilation="compiled"
+            locales="en-AU,en-CA,en-GB,en-IN,en-NG,en-PH,en-PK,en-SG,en-US,en-ZA,de-DE,fr-CA,fr-FR,es-AR,es-ES,es-MX,id-ID,it-IT,ja-JP,ko-KR,pt-BR,ru-RU,tr-TR,vi-VN,zxx-XX,zh-Hans-CN,zh-Hant-HK,zh-Hant-TW,zh-Hans-SG"/>
+    </target>
+    <target name="assemble.core" depends="assemble.core.assembled,assemble.core.dyndata"/>
 
 	<target name="closure">
 		<jscomp compilationlevel="simple"
@@ -264,13 +270,6 @@ limitations under the License.
 			<arg value="${build.output.dyncode}/ilib.js"/>
 			<arg value="-m"/>
 		</exec>
-		<exec osfamily="mac" executable="node" dir="${build.base}" failifexecutionfails="true">
-			<arg value="${uglify.location}/bin/uglifyjs"/>
-			<arg value="${build.output.js}/ilib.js"/>
-			<arg value="-o"/>
-			<arg value="${build.output.dyncode}/ilib.js"/>
-			<arg value="-m"/>
-		</exec>
 		<exec osfamily="windows" executable="node.exe" dir="${build.base}" failifexecutionfails="true">
 			<arg value="${uglify.location}/bin/uglifyjs"/>
 			<arg value="${build.output.js}/ilib.js"/>
@@ -286,16 +285,6 @@ limitations under the License.
 			<targetfile/>
 			<arg value="-m"/>
 			<fileset dir="${build.lib}" includes="*.js" excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
-			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
-			<mapper type="glob" from="*.js" to="*.js"/>
-		</apply>
-		<apply osfamily="mac" executable="node" dest="${build.output.dyncode}" parallel="false">
-			<arg value="${uglify.location}/bin/uglifyjs"/>
-			<srcfile/>
-			<arg value="-o"/>
-			<targetfile/>
-			<arg value="-m"/>
-			<fileset dir="${build.lib}" includes="*.js"  excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
 			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
 			<mapper type="glob" from="*.js" to="*.js"/>
 		</apply>
@@ -471,11 +460,6 @@ limitations under the License.
 				<arg line="@{assembly}"/>
 				<arg line="@{compilation}"/>
 			</exec>
-			<exec osfamily="mac" executable="node" dir="${build.test}" failifexecutionfails="@{failquit}" failonerror="@{failquit}">
-				<arg line="testRunner.js"/>
-				<arg line="@{assembly}"/>
-				<arg line="@{compilation}"/>
-			</exec>
 			<exec osfamily="windows" executable="node.exe" dir="${build.test}" failifexecutionfails="@{failquit}"  failonerror="@{failquit}">
 				<arg line="testRunner.js"/>
 				<arg line="@{assembly}"/>
@@ -491,9 +475,6 @@ limitations under the License.
 			<exec osfamily="unix" executable="node" dir="${build.test}" failifexecutionfails="@{failquit}" failonerror="@{failquit}">
 				<arg line="@{suite}/nodeunit/testSuite.js"/>
 			</exec>
-			<exec osfamily="mac" executable="node" dir="${build.test}" failifexecutionfails="@{failquit}" failonerror="@{failquit}">
-				<arg line="@{suite}/nodeunit/testSuite.js"/>
-			</exec>
 			<exec osfamily="windows" executable="node.exe" dir="${build.test}" failifexecutionfails="@{failquit}"  failonerror="@{failquit}">
 				<arg line="@{suite}/nodeunit/testSuite.js"/>
 			</exec>
@@ -505,18 +486,11 @@ limitations under the License.
 		<attribute name="failquit"/>
 		<sequential>
 			<exec osfamily="unix" executable="node" dir="${build.test}" failifexecutionfails="@{failquit}" failonerror="@{failquit}">
-				<arg line="--inspect"/>
-				<arg line="--debug-brk"/>
-				<arg line="@{suite}/nodeunit/testSuite.js"/>
-			</exec>
-			<exec osfamily="mac" executable="node" dir="${build.test}" failifexecutionfails="@{failquit}" failonerror="@{failquit}">
-				<arg line="--inspect"/>
-				<arg line="--debug-brk"/>
+				<arg line="--inspect-brk"/>
 				<arg line="@{suite}/nodeunit/testSuite.js"/>
 			</exec>
 			<exec osfamily="windows" executable="node.exe" dir="${build.test}" failifexecutionfails="@{failquit}"  failonerror="@{failquit}">
-				<arg line="--inspect"/>
-				<arg line="--debug-brk"/>
+				<arg line="--inspect-brk"/>
 				<arg line="@{suite}/nodeunit/testSuite.js"/>
 			</exec>
 		</sequential>
@@ -639,11 +613,6 @@ limitations under the License.
 				<arg line="@{args}"/>
 				<arg line="nodejs"/>
 			</exec>
-			<exec osfamily="mac" executable="node" dir="@{dir}" failifexecutionfails="true" failonerror="true">
-				<arg line="@{script}"/>
-				<arg line="@{args}"/>
-				<arg line="nodejs"/>
-			</exec>
 			<exec osfamily="windows" executable="node.exe" dir="@{dir}" failifexecutionfails="true"  failonerror="true">
 				<arg line="@{script}"/>
 				<arg line="@{args}"/>
@@ -700,9 +669,6 @@ limitations under the License.
 		<exec osfamily="unix" executable="node" dir="${build.locale.src}">
 			<arg value="${build.tools.build}/mkli.js"/>
 		</exec>
-		<exec osfamily="mac" executable="node" dir="${build.locale.src}">
-			<arg value="${build.tools.build}/mkli.js"/>
-		</exec>
 		<exec osfamily="windows" executable="node.exe" dir="${build.locale.src}">
 			<arg value="${build.tools.build}/mkli.js"/>
 		</exec>
@@ -718,11 +684,6 @@ limitations under the License.
 			description="compresses the json files"
 			unless="json.compress.not.needed">
 		<exec osfamily="unix" executable="node" dir="${build.locale.src}" failifexecutionfails="true" failonerror="true">
-			<arg value="${build.tools.build}/jsoncompress.js"/>
-			<arg value="."/>
-			<arg value="${build.locale}"/>
-		</exec>
-		<exec osfamily="mac" executable="node" dir="${build.locale.src}">
 			<arg value="${build.tools.build}/jsoncompress.js"/>
 			<arg value="."/>
 			<arg value="${build.locale}"/>
@@ -744,9 +705,6 @@ limitations under the License.
 			description="produces the ilibmanifest.json file"
 			unless="locale.manifest.not.needed">
 		<exec osfamily="unix" executable="node" dir="${build.locale}">
-			<arg value="${build.tools.build}/mkmf.js"/>
-		</exec>
-		<exec osfamily="mac" executable="node" dir="${build.locale}">
 			<arg value="${build.tools.build}/mkmf.js"/>
 		</exec>
 		<exec osfamily="windows" executable="node.exe" dir="${build.locale}">
@@ -778,10 +736,6 @@ limitations under the License.
 				<arg line="@{command}"/>
 				<arg line="@{args}"/>
 			</exec>
-			<exec osfamily="mac" executable="npm" dir="@{dir}" failifexecutionfails="true" failonerror="true">
-				<arg line="@{command}"/>
-				<arg line="@{args}"/>
-			</exec>
 			<exec osfamily="windows" executable="npm.exe" dir="@{dir}" failifexecutionfails="true"  failonerror="true">
 				<arg line="@{command}"/>
 				<arg line="@{args}"/>
@@ -794,10 +748,6 @@ limitations under the License.
 	<target name="testuglifyinstalled" depends="npm.set.parseable.true">
     	<echo>Testing if uglify is already installed.</echo>
     	<exec osfamily="unix" outputproperty="uglify.location" resultproperty="uglify.result" errorproperty="uglify.error" executable="sh" dir="${build.base}" failifexecutionfails="true">
-    		<arg value="-c"/>
-			<arg value="npm list uglify-js | tail -1"/>
-		</exec>
-		<exec osfamily="mac" outputproperty="uglify.location" resultproperty="uglify.result" errorproperty="uglify.error" executable="sh" dir="${build.base}" failifexecutionfails="true">
     		<arg value="-c"/>
 			<arg value="npm list uglify-js | tail -1"/>
 		</exec>
@@ -817,10 +767,6 @@ limitations under the License.
 	</target>
 	<target name="location.trireme">
     	<exec osfamily="unix" outputproperty="trireme.location" resultproperty="trireme.result" errorproperty="trireme.error" executable="sh" dir="${build.base}" failifexecutionfails="true">
-    		<arg value="-c"/>
-			<arg value="npm list trireme | tail -1"/>
-		</exec>
-		<exec osfamily="mac" outputproperty="trireme.location" resultproperty="trireme.result" errorproperty="trireme.error" executable="sh" dir="${build.base}" failifexecutionfails="true">
     		<arg value="-c"/>
 			<arg value="npm list trireme | tail -1"/>
 		</exec>
@@ -925,9 +871,6 @@ limitations under the License.
 			<arg value="node_modules/http-server/bin/http-server"/>
 			<arg value="-p"/>
 			<arg value="9090"/>
-		</exec>
-		<exec osfamily="mac" resultproperty="uglify.result" errorproperty="uglify.error" executable="node" dir="${build.base}" failifexecutionfails="true">
-			<arg value="node_modules/http-server/bin/http-server"/>
 		</exec>
 		<exec osfamily="windows" resultproperty="uglify.result" errorproperty="uglify.error" executable="node.exe" dir="${build.base}" failifexecutionfails="true">
 			<arg value="node_modules/http-server/bin/http-server"/>
