--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ build.properties
 /js/output/
 /js/package.json
 **/localeinfo.json
+/node_modules/*
+js/node_modules/*
+!/node_modules/nodeunit/
+!/node_modules/.bin/nodeunit
