Make "npm install" work properly before the build

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "nodeunit": "0.12.0",
         "should": ">=11.1.0",
         "tap": "^10.0.2",
+        "trireme": "^0.9.0",
         "uglify-js": "^3.3.0"
     }
 }
