--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
         "trireme": ">= 0.9.0",
         "uglify-js": ">= 3.3.0",
         "webpack": ">= 3.10.0",
-        "uglifyjs-webpack-plugin": "^1.0.0"
+        "uglifyjs-webpack-plugin": "^1.0.0",
+        "iso-19524": "^2.0.0"
     },
     "scripts": {
         "test": "ant test",
