--- a/js/build.xml
+++ b/js/build.xml
@@ -1375,12 +1375,12 @@ limitations under the License.
 
 	<target name="test.remote" depends="prepare,assemble.unittest" description="Run a remote server to test ilib in remote browsers">
 	    <exec osfamily="unix" executable="node" dir="${build.base}" failifexecutionfails="true">
-			<arg value="node_modules/http-server/bin/http-server"/>
+			<arg value="../node_modules/http-server/bin/http-server"/>
 			<arg value="-p"/>
 			<arg value="9090"/>
 		</exec>
 		<exec osfamily="windows" executable="node.exe" dir="${build.base}" failifexecutionfails="true">
-			<arg value="node_modules/http-server/bin/http-server"/>
+			<arg value="../node_modules/http-server/bin/http-server"/>
 		</exec>
 	</target>
 </project>
