--- a/package.json
+++ b/package.json
@@ -55,19 +55,19 @@
     "devDependencies": {
         "babel-loader": "^7.1.2",
         "cldr-data": "^32.0.0",
+        "ejs": "^2.5.2",
         "grunt": "~0.4.5",
         "grunt-contrib-nodeunit": "~0.4.1",
         "grunt-contrib-uglify": "~0.5.0",
-        "ejs": "^2.5.2",
         "http-server": "^0.11.1",
+        "iso-19524": "^2.0.0",
         "nodeunit": "0.12.0",
         "should": ">=11.1.0",
         "tap": "^10.0.2",
         "trireme": "^0.9.0",
-        "uglify-js": "^3.3.0"
-        "webpack": ">= 3.10.0",
+        "uglify-js": "^3.3.0",
         "uglifyjs-webpack-plugin": "^1.0.0",
-        "iso-19524": "^2.0.0"
+        "webpack": ">= 3.10.0"
     },
     "scripts": {
         "test": "ant test",
